--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Cookies</title>
+  <title>Калькулятор ИМТ</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
-<h1>Cookies test</h1>
-<form action="" method="get">
-    <p>
-      <label for="name">Введите имя:</label>
-      <input type="text" name="name" id="name" required>
-    </p>
+<form>
+  <div class="mb-3">
+    <label for="height" class="form-label">Рост</label>
+    <input type="integer" class="form-control" id="heightinput">
+  </div>
+  <div class="mb-3">
+    <label for="weight" class="form-label">Вес</label>
+    <input type="integer" class="form-control" id="weightinput">
+  </div>
 </form>
-<button onclick="setName()">Задать имя</button>
-<p id="output">Привет</p>
-<script src="index.js"></script>
+<button onclick="BMIcalc()" class="btn btn-primary">Рассчитать</button>
+  <div id="bmioutput">Ваш индекс:</div>
+  <script>
+    function BMIcalc()
+    {
+      const height = parseInt(document.getElementById("heightinput").value)/100
+      const weight = parseInt(document.getElementById("weightinput").value)
+      const bmi = weight/(height*height)
+      document.getElementById("bmioutput").innerHTML = `Ваш индекс: ${bmi}`
+    }
+  </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
-
