--- a/index.html
+++ b/index.html
@@ -1,31 +1,78 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
-  <title>Калькулятор ИМТ</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+<meta charset="UTF-8" />
+<title>Система бронирования отеля</title>
+<style>
+  body { font-family: Arial, sans-serif; margin: 20px; }
+  label { display: block; margin-top: 10px; }
+  button { margin-top: 15px; }
+  #result { margin-top: 20px; font-weight: bold; }
+</style>
 </head>
 <body>
-<form>
-  <div class="mb-3">
-    <label for="height" class="form-label">Рост</label>
-    <input type="integer" class="form-control" id="heightinput">
-  </div>
-  <div class="mb-3">
-    <label for="weight" class="form-label">Вес</label>
-    <input type="integer" class="form-control" id="weightinput">
-  </div>
-</form>
-<button onclick="BMIcalc()" class="btn btn-primary">Рассчитать</button>
-  <div id="bmioutput">Ваш индекс:</div>
-  <script>
-    function BMIcalc()
-    {
-      const height = parseInt(document.getElementById("heightinput").value)/100
-      const weight = parseInt(document.getElementById("weightinput").value)
-      const bmi = weight/(height*height)
-      document.getElementById("bmioutput").innerHTML = `Ваш индекс: ${bmi}`
-    }
-  </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
+<h2>Бронирование номера</h2>
+
+<!-- Вводные данные -->
+<label>
+  Есть свободные номера:
+  <select id="availability">
+    <option value="да">да</option>
+    <option value="нет">нет</option>
+  </select>
+</label>
+
+<label>
+  Платёж одобрен:
+  <select id="payment">
+    <option value="да">да</option>
+    <option value="нет">нет</option>
+  </select>
+</label>
+
+<label>
+  Специальное предложение:
+  <select id="specialOffer">
+    <option value="да">да</option>
+    <option value="нет">нет</option>
+  </select>
+</label>
+
+<button onclick="processBooking()">Обработать бронирование</button>
+
+<div id="result"></div>
+
+<script>
+function processBooking() {
+  // Получение значений условий
+  const availability = document.getElementById('availability').value;
+  const payment = document.getElementById('payment').value;
+  const specialOffer = document.getElementById('specialOffer').value;
+
+  const resultDiv = document.getElementById('result');
+
+  // Логика принятия решения
+  if (availability === 'нет') {
+    resultDiv.textContent = 'Отказать в бронировании (нет свободных номеров).';
+    return;
+  }
+
+  if (payment !== 'да') {
+    resultDiv.textContent = 'Отказать в бронировании (платёж не одобрен).';
+    return;
+  }
+
+  // Если есть специальное предложение
+  if (specialOffer === 'да') {
+    // Применить скидку
+    resultDiv.textContent = 'Бронирование подтверждено. Применена скидка.';
+  } else {
+    // Просто подтвердить бронирование
+    resultDiv.textContent = 'Бронирование подтверждено.';
+  }
+}
+</script>
+
 </body>
 </html>
