--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My calc</title>
+    <title>BMI calc</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
   <body>
-    
-    
-    <div class="mb-3">
-  <label for="heighinput" class="form-label">Heigh in sm</label>
-  <input type="int" class="form-control" id="heighinput" ><br>
-    <label for="weighinput" class="form-label">Weight in kg</label>
-  <input type="int" class="form-control" id="weighinput" ><br>
-</div>
-<button type="button" class="btn btn-primary" onclick="getBMI()">Click</button>
-<h1 id="output"></h1>
-<script>
-    function getBMI()
-    {
-        const heigh = parseInt(document.getElementById("heighinput").value)/100
-        const weigh = parseInt(document.getElementById("weighinput").value)
-        const bmi = weigh/(heigh*heigh)
-        document.getElementById("output").innerText = Math.round(bmi)
-    }
-</script>
+    <h1>Hello, world!</h1>
+    <form>
+  <div class="mb-3">
+    <label for="weightInput" class="form-label">Вес в килограммах</label>
+    <input type="int" class="form-control" id="weightInput" >
+  </div>
+  <div class="mb-3">
+    <label for="heightInput" class="form-label">Рост в сантиметрах</label>
+    <input type="int" class="form-control" id="heightInput">
+  </div>
+</form>
+    <button onclick="bmicalc()" class="btn btn-primary">Расчитать</button>
+    <h1 id="output"></h1>
+    <script>
+      const weight = document.getElementById("weightInput").value
+      const height = document.getElementById("heightInput").value/100
+      const bmi = weight/(height*heght)
+      document.getElementById("output").innerText = bmi
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
