--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
     <button onclick="bmicalc()" class="btn btn-primary">Расчитать</button>
     <h1 id="output"></h1>
     <script>
+      funtion bmicalc()
+      {
       const weight = document.getElementById("weightInput").value
       const height = document.getElementById("heightInput").value/100
-      const bmi = weight/(height*heght)
+      const bmi = weight/(height*height)
       document.getElementById("output").innerText = bmi
+        }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
+
