--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button onclick="bmicalc()" class="btn btn-primary">Расчитать</button>
     <h1 id="output"></h1>
     <script>
-      funtion bmicalc()
+      function bmicalc()
       {
       const weight = document.getElementById("weightInput").value
       const height = document.getElementById("heightInput").value/100
@@ -32,4 +32,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
