--- a/index.html
+++ b/index.html
@@ -3,34 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BMI calc</title>
+    <title>Demo Calc</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Калькулятор</h1>
     <form>
-  <div class="mb-3">
-    <label for="weightInput" class="form-label">Вес в килограммах</label>
-    <input type="int" class="form-control" id="weightInput" >
-  </div>
-  <div class="mb-3">
-    <label for="heightInput" class="form-label">Рост в сантиметрах</label>
-    <input type="int" class="form-control" id="heightInput">
-  </div>
-</form>
-    <button onclick="bmicalc()" class="btn btn-primary">Расчитать</button>
-    <h1 id="output"></h1>
-    <script>
-      function bmicalc()
-      {
-      const weight = document.getElementById("weightInput").value
-      const height = document.getElementById("heightInput").value/100
-      const bmi = weight/(height*height)
-      document.getElementById("output").innerText = bmi
-        }
-    </script>
+        <div class="mb-3">
+          <label for="heightinput" class="form-label">Рост</label>
+          <input type="int" class="form-control" id="heightinput" aria-describedby="heightinput">
+        </div>
+        <div class="mb-3">
+          <label for="weightinput" class="form-label">Вес</label>
+          <input type="int" class="form-control" id="weightinput">
+        </div>
+        
+      </form>
+      <h2 id="output"></h2>
+      <button  class="btn btn-primary" onclick="getBmi()">Рассчитать</button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </body>
+  <script>
+      function getBmi()
+      {
+          const height = document.getElementById("heightinput").value/100
+          const weight = document.getElementById("weightinput").value
+          const bmi = weight/(height*height)
+          document.getElementById("output").innerText = bmi.toFixed(2)
+      }
+  </script>
+</body>
 </html>
-
-
